--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,18 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.xpp]
+end_of_line = crlf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
 end_of_line = lf
+indent_size = 4
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.ps1]
+end_of_line = crlf
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
